--- a/learnhtml_freecodecamp/10.LESSON/contact.html
+++ b/learnhtml_freecodecamp/10.LESSON/contact.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="this page contains the form to contact the Little Taco Shop">
 
 	<title>Little Taco Shop</title>
-	<link rel="icon" href="taco.png" type="image/x-icon">
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="main.css" type="text/css">
 </head>
 
@@ -17,28 +17,29 @@
 		<nav aria-label="primary-navigation">
 			<ul>
 				<li>
-					<a href="#home">Home</a>
+					<a href="index.html">Home</a>
 				</li>
 				<li>
-					<a href="#about">About LTS</a>
+					<a href="index.html">About LTS</a>
 				</li>
 				<li>
-					<a href="#menu">Our Menu</a>
+					<a href="index.html">Our Menu</a>
 				</li>
 				<li>
-					<a href="#hours">Store Hours</a>
+					<a href="hours.html">Store Hours</a>
 				</li>
 			</ul>
 		</nav>
 
-		<img src="img/tacos_close_up_400x260.png" alt="tacos on a tray" title="tacos on a tray" width="400"
-			height="267">
+		<img src="img/tacos_close_up_400x260.png" alt="close up on tacos" title="close up on tacos" width="400"
+			height="260">
 		<figure>
 			<figcaption>Little Taco Shop Tacos!</figcaption>
 		</figure>
 		<hr>
 
 		<article id="contact">
+			<section>
 			<h2>Our Contact Form</h2>
 			<form action="https://httpbin.org/get" method="get">
 				<fieldset>
@@ -62,16 +63,19 @@
 				<button type="submit">Submit</button>
 				<button type="reset">Reset</button>
 			</form>
+		</section>
 		</article>
 		<br>
 
+		<section>
 		<h2>Our Location</h2>
 		<address>
 			555 Taco Temptation Lane, Suite T<br>
 			Kansas City, MO 55555-5555
 		</address>
 		<br>
-		<em>Phone:</em> <a href="tel:5555555555">555-555-5555</a>
+		<em>Phone:</em> <a href="tel:+5555555555">555-555-5555</a>
+	</section>
 
 	</header>
 	<footer>
