--- a/learnhtml_freecodecamp/10.LESSON/hours.html
+++ b/learnhtml_freecodecamp/10.LESSON/hours.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="this page contains the details about a Taco Store called Little Taco Shop">
 
 	<title>Little Taco Shop</title>
-	<link rel="icon" href="taco.png" type="image/x-icon">
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="main.css" type="text/css">
 </head>
 
