--- a/learnhtml_freecodecamp/10.LESSON/index.html
+++ b/learnhtml_freecodecamp/10.LESSON/index.html
@@ -4,10 +4,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="author" content="Paula Balbino">
-	<meta name="description" content="this page contains the details about a Taco Store called Little Taco Shop">
+	<meta name="description" content="this website contains the details about a Taco Store called The Little Taco Shop">
 
-	<title id="home">Little Taco Shop</title>
-	<link rel="icon" href="taco.png" type="image/x-icon">
+	<title>The Little Taco Shop</title>
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="main.css" type="text/css">
 </head>
 
@@ -30,12 +30,11 @@
 				</li>
 			</ul>
 		</nav>
-	</header>
-
-	<img src="img/tacos_and_drink_400x267.png" alt="tacos and drink" title="tacos and drink" width="400" height="267">
+		<img src="img/tacos_and_drink_400x267.png" alt="tacos and drink" title="tacos and drink" width="400" height="267">
 	<figure>
 		<figcaption>Tacos and Jarritos are always a good choice!</figcaption>
 	</figure>
+	</header>
 	<hr>
 	<section id="about">
 		<h2>About LTS</h2>
@@ -43,15 +42,17 @@
 		<p>We hope our shop adds a unique and interesting place to our little town.</p>
 
 		<h3>Taco Trivia</h3>
+		<aside>
 		<details>
 			<summary>When did tacos first appear in the United States?</summary>
 			<p>The Taco was first introduced to the United States in 1905. </p>
 			<p>Mexican migrants were coming in to work on railroads and other </p>
 			<p>jobs and started to bring their delicious food with them.</p>
-			<a
+			(Source: <cite> <a
 				href="https://www.twistedtaco.com/the-history-of-the-taco#:~:text=This%20daily%20staple%20was%20filling%2C%20delicious%2C%20and%20affordable.&text=The%20Taco%20was%20first%20introduced,their%20delicious%20food%20with%20them.">History
-				of Tacos</a>
+				of Tacos</a></cite>)
 		</details>
+	</aside>
 	</section>
 	<hr>
 	<section id="menu">
@@ -68,60 +69,34 @@
 			<tbody>
 				<tr>
 					<th scope="row" rowspan="3">Crunchy</th>
-
-					<td>
-						1
-					</td>
-					<td>
-						$1.50
-					</td>
+					<td>1</td>
+					<td>$1.50</td>
 				</tr>
 				<tr>
-					<td>
-						2
-					</td>
-					<td>
-						$2.50
-					</td>
+					<td>2</td>
+					<td>$2.50</td>
 				</tr>
 				<tr>
-					<td>
-						3
-					</td>
-					<td>
-						$3.50
-					</td>
+					<td>3</td>
+					<td>$3.50</td>
 				</tr>
 				<tr>
 					<th scope="row" rowspan="3">Soft</th>
 
-					<td>
-						1
-					</td>
-					<td>
-						$2.00
-					</td>
+					<td>1</td>
+					<td>$2.00</td>
 				</tr>
 				<tr>
-					<td>
-						2
-					</td>
-					<td>
-						$3.50
-					</td>
+					<td>2</td>
+					<td>$3.50</td>
 				</tr>
 				<tr>
-					<td>
-						3
-					</td>
-					<td>
-						$4.50
-					</td>
+					<td>3</td>
+					<td>$4.50</td>
 				</tr>
 				<tr>
-					<td colspan="3">Chips & Salsa $2</td>
+					<td colspan="3">Chips &amp; Salsa $2</td>
 				</tr>
-
 			</tbody>
 		</table>
 		</section>
@@ -133,5 +108,6 @@
 			<p> &copy; <a href="about.html">The Little Taco Shop</a></p>
 		</footer>
 </body>
-
 </html>
+
+<!--freeCodeCamp HTML exercise by Dave Gray https://www.youtube.com/watch?v=kUMe1FH4CHE -->
